# availability_c-

./: CMakeCache.txt  CMakeLists.txt  Makefile  REFACTORING_STATUS.txt  availability.txt  availability_sim  cmake_install.cmake  reference.txt  results.txt  spec.txt  spec2.txt  spec3.txt  spliced_dist.txt  ssd_failure_times.txt  test.md
configs/: 16enc_3tier_2io.json  16enc_encoding_controller.json  16enc_encoding_iomodule.json  16enc_hdd_2io.json  16enc_purestorage_2io.json  16enc_vastdata_2io.json  16enclosure_distributed_1io.json  16enclosure_distributed_2io.json  16enclosure_distributed_2io_multi_ec.json  24enclosure_distributed_1io.json  24enclosure_distributed_2io.json  2tier.json  2tier_ssd_mapping.json  2tier_sw_hw_fault.json  32enc_encoding_iomodule.json  8enc_encoding_iomodule.json  8enclosure_48ssd.json  8enclosure_distributed.json  8enclosure_ec20_4_distributed.json  8enclosure_intra.json  8enclosure_lrc_distributed.json  8enclosure_lrc_local.json  test_encoding_compare_controller.json  test_encoding_compare_iomodule.json  test_encoding_controller.json  test_encoding_cross_iomodule.json  test_encoding_iomodule.json  test_multi_ec_ec.json  test_multi_ec_rep.json  test_multilevel.json  test_replication_iomodule.json
docs/: importance_sampling.md  simulation_results_summary.md
include/: disk.hpp  erasure_coding.hpp  graph_structure.hpp  logger.hpp  simulation.hpp  simulation_helpers.hpp  ssd.hpp  utils.hpp
json/: 2tier-singleport-dualio.json  2tier-singleport.json  2tier.json  3tier-singleport-dualio.json  3tier-singleport.json  3tier.json
src/: disk.cpp  (+9 more)
(+24 files in other folders)
